test/string/addition.cipl.out
::stdout::
Hi

::stderr::
Error: Operands must be numbers at line 2
