test/string/addition.cipl
print("H" ~ "i")
print("H" + "i") # This is not valid and should give an error